--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.8.1
 click==8.0.3
 Flask==2.0.2
 Flask-MySQL==1.5.2
@@ -7,5 +8,12 @@ itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 PyMySQL==1.0.2
+python-decouple==3.5
+python-dotenv==0.19.2
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
+six==1.16.0
 SQLAlchemy==1.4.26
+tzdata==2021.5
+tzlocal==4.1
 Werkzeug==2.0.2
